# Homework_27_Django

./: .gitignore  README.md  db.sqlite3  load_data.py  pyproject.toml
Homework_27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_name.py  0002_categories_created_categories_slug_categories_status.py  0003_alter_category_id.py
ads/views/: ads.py  category.py  locations.py  service.py  users.py
avito/: asgi.py  settings.py  urls.py  wsgi.py
cats/: admin.py  apps.py  models.py  urls.py  views.py
cats/migrations/: 0001_initial.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
