[project]
name = "avito"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex-Power-programmer",email = "pythonalex84@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
